--- a/.prettierrc
+++ b/.prettierrc
@@ -1,15 +1,13 @@
 {
-    "singleQuote": false, 
-    "semi": true
-     "trailingComma": "nome"
-     "overrides": [
-        {
-            "files": "*.html", 
-            "options": {
-                "parser": "html"
-            }
-        }
-     ]
-      
+  "singleQuote": false,
+  "semi": true,
+  "trailingComma": "none",
+  "overrides": [
+    {
+      "files": "*.html",
+      "options": { 
+        "parser": "html"
+      }
+    }
+  ]
 }
-
